[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "monoback"
authors = [{name = "Asvel", email = "fe.asvel@gmail.com"}]
readme = "README.md"
requires-python = "~=3.7"
license = {file = "LICENSE.txt"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Text Processing :: Fonts",
]
dependencies = [
    "fonttools >=4",
]
dynamic = ["version", "description"]

[project.urls]
Home = "https://github.com/Asvel/monoback"

[project.scripts]
monoback = "monoback:main"
